# rho-pac-bayes

./: .gitignore  Makefile  README.md  pyproject.toml
R/: plot_gaussian.R  plot_poisson.R  plot_realworld.R  plot_regression.R  plot_uniform.R  theme.R
notebooks/: main.ipynb
results/: abalone_metrics.csv  correlated_predictions.csv  correlated_summary.csv  correlated_trials.csv  fourier_summary.csv  fourier_trials.csv  gaussian_summary.csv  gaussian_trials.csv  housing_metrics.csv  poisson_summary.csv  poisson_trials.csv  uniform_summary.csv  uniform_trials.csv
scripts/: download_data.py  export_residuals_csv.py  plot_all.py  run_correlated.py  run_fourier.py  run_gaussian.py  run_poisson.py  run_realworld.py  run_uniform.py  test_quick.py
src/: __init__.py  baselines.py  contrasts.py  data.py  evaluation.py  optimizers.py  plotting.py  realworld.py  regression.py  variational.py
